--- a/css/styles_shop.css
+++ b/css/styles_shop.css
@@ -1,11 +1,22 @@
 body {
   height: 100%;
 }
+/* html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+} */
+
+@font-face {
+  font-family: farmhandsans;
+  src: url('../font/FarmhandSans-Regular.otf') format("opentype");
+}
+
 
 @font-face {
   font-family: apricots;
-  src: url('../font/Apricots.otf');
+  src: url('../font/Apricots.otf') format("opentype");
 }
+
 
 
 .container-fluid {
@@ -40,17 +51,17 @@ body {
   background-color: #f0f7ee!important;
   display: grid;
   font-size: 2em;
-  font-family: "Open Sans", sans-serif;
+  font-family: farmhandsans, sans-serif;
   grid-area: nav;
   position: sticky!important;
 }
 
-@media (min-width: 992px){
+
   .navbar li {
       margin-left : 1em;
       margin-right : 1em;
   }
-}
+
 
 
 .main-photo {
@@ -60,14 +71,23 @@ body {
   text-align: center;
 }
 
+.shopify-buy__product__title {
+  font-family: farmhandsans, sans-serif!important;
+}
+
 .main-photo > img {
-  object-position: 50% 50%;
+  /* object-position: 50% 50%; */
   width: 100%;
   height: 100%;
+  z-index: -1;
+  /* z-index: ; */
   object-fit: cover;
 }
 
-
+.farmhand{
+  font-family: farmhandsans, sans-serif!important;
+  font-size: 1.5em!important;
+}
 
 
 .motto {
@@ -84,10 +104,13 @@ body {
 
 }
 
+.foodis {
+  font-family: farmhandsans, sans-serif;
+}
 .colord {
   color : #304242;
-  font-style: oblique;
   font-weight: 900;
+  font-family: apricots, cursive!important;
 }
 
 h1{
@@ -100,7 +123,7 @@ h1{
 
 .body-text {
   grid-area: body;
-  margin: 0 5%;
+  margin: 0 10%;
   font-family: "Open Sans", sans-serif;
   font-size: 1.5em;
 }
