--- a/contactform/form.css
+++ b/contactform/form.css
@@ -13,6 +13,13 @@ body{
   font-family:  "Open Sans", sans-serif;
 
 }
+
+@media(max-width: 500px){
+  body {
+    background-size: auto 100%;
+    background-attachment: fixed;
+  }
+}
 .panel{
   background-color: #f0f7ee;
 }
