--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -1,10 +1,10 @@
 body {
   height: 100%;
 }
-/* html, body {
+ html, body {
   max-width: 100%;
   overflow-x: hidden;
-} */
+} 
 
 @font-face {
   font-family: farmhandsans;
@@ -48,21 +48,54 @@ body {
   font-weight: 700;
   width: 100%;
   padding: 0;
-  background-color: #f0f7ee!important;
+  background-color: #FFF!important;
   display: grid;
-  font-size: 2em;
+  font-size: 2.5em;
   font-family: farmhandsans, sans-serif;
   grid-area: nav;
   position: sticky!important;
 }
 
 
-  .navbar li {
+
+.navbar li {
       margin-left : 1em;
       margin-right : 1em;
-  }
+      white-space: nowrap;    
+  /* background-color: #f0f7ee; */
+}
 
+.navbar > div > ul > li > div > .dropdown-item{
+  font-size: 1.5em;
+}
 
+.navbar > div > ul > li > div{
+  /* background-color: #f0f7ee; */
+  border: 0px;
+}
+
+#navbarTogglerDemo02 {
+  /* background-color: #f0f7ee; */
+}
+
+.page-divider {
+  border-bottom-width: 2px;
+  width: 100vw;
+  border-bottom: 1px solid #5c5c5c;
+  text-align: center;
+  line-height: 1.6em;
+  margin-top: -1.6em;
+  margin-bottom: 1.6em;
+  font-size: 14px;
+  display: block; 
+  /* z-index: -1; */
+}
+
+.Menu-Btn{
+  font-size: 2em!important;
+  margin-left: 1em;
+  margin-right: 1em;
+}
 
 .main-photo {
   grid-area: photo;
@@ -96,8 +129,13 @@ body {
   font-family: "Open Sans", sans-serif;
   display: grid;
   grid-template-columns: repeat(5, auto);
-  justify-content: space-around;
+  justify-content: center;
+}
 
+.motto > p {
+  margin-right: .5em;
+  margin-left: .5em;
+  white-space: nowrap;
 }
 
 .foodis {
@@ -117,11 +155,28 @@ h1{
   margin-bottom: 1em!important;
 }
 
+#grow {
+  margin-bottom: 0.25em!important;
+  font-size: 300%!important;
+}
+
+h2{
+  font-family: apricots, cursive!important;
+  font-size: 2.5em!important;
+}
+
 .body-text {
-  grid-area: body;
+  text-align: justify;
+  text-justify: inter-word!important;
   margin: 0 10%;
+  /* margin-top: 2em; */
   font-family: "Open Sans", sans-serif;
   font-size: 1.5em;
+}
+
+.headshot {
+ max-width: 100%;
+ max-height: 100%;
 }
 
 .secthead {
@@ -148,7 +203,7 @@ h1{
   align-content: center;
   font-family: "Open Sans", sans-serif;
   font-size: 1.25em;
-  font-weight: 900;
+  font-weight: 400;
 }
 
 .signature {
@@ -187,7 +242,48 @@ border-radius: 1em;
   align-content: center;
   font-family: "Open Sans", sans-serif;
   font-size: 1.25em;
-  font-weight: 900;
+  font-weight: 400;
+}
+
+.row3 {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 2fr 1fr ;
+  grid-template-areas: "quote leah";
+  margin: 2em 10% 2em 10%;
+  align-items: center;
+}
+
+.row3 > .c1 {
+  grid-area: quote;
+  align-content: center;
+  margin-right: 1em;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.25em;
+  font-weight: 400;
+}
+
+.plantsale{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.row3 > .c3 {
+  grid-area: leah;
+}
+
+.row3 > .c3 > img{
+border-radius: 1em;
+}
+.fttpic {
+  max-width: 100%;
+}
+.centered {
+  text-align: center;
+}
+
+.just-txt{
+  text-align: justify;
 }
 
 hr{
@@ -208,6 +304,10 @@ footer {
     grid-template-areas: "quote"
     "leah";
   }
+  .navbar{
+    font-size: 2em;
+  }
+
 }
 
 @media (max-width: 768px){
@@ -215,7 +315,17 @@ footer {
     max-width: 15em;
     justify-self: flex-start;
   }
+
   .motto {
     font-size: 1.5em;
+  }
+  .page-divider {
+    display: none;
+  }
+}
+
+@media (max-width: 576px){
+  .motto{
+    font-size: 1em;
   }
 }
