--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -22,7 +22,7 @@ body {
 .container-fluid {
   height: 100%;
   width: 100%;
-  display: grid;
+  /* display: grid; */
   grid-template-columns: auto;
   grid-template-rows: auto auto auto auto auto;
   grid-template-areas:
@@ -36,7 +36,7 @@ body {
 }
 
 .site-logo {
-  display: grid;
+  /* display: grid; */
   grid-area: logo;
   max-width: 200px;
 }
@@ -49,10 +49,13 @@ body {
   width: 100%;
   padding: 0;
   background-color: #FFF!important;
-  display: grid;
+  /* display: grid; */
   font-size: 2.5em;
   font-family: farmhandsans, sans-serif;
   grid-area: nav;
+  position: sticky!important;
+}
+.navbar-toggler{
   position: sticky!important;
 }
 
@@ -231,9 +234,10 @@ border-radius: 1em;
 }
 .row2>.c1{
   grid-area: pepper;
+  align-content: center;
 }
 .row2 > .c1 > img {
-  width: 560px;
+  /* width: 560px; */
   border-radius: 1em;
   max-width: 50vw;
 }
@@ -304,6 +308,24 @@ footer {
     grid-template-areas: "quote"
     "leah";
   }
+  
+  .row2{
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "text"
+    "pepper";
+  }
+  .row2 > .c2{
+  margin: auto;
+  }
+
+  .row2 > .c1 {
+    text-align: center;
+  }
+  .row2 > .c1 > img {
+    max-width: 85%;
+  }
+
   .navbar{
     font-size: 2em;
   }
