--- a/css/styles_index1.css
+++ b/css/styles_index1.css
@@ -38,7 +38,7 @@ body {
 .site-logo {
   /* display: grid; */
   grid-area: logo;
-  max-width: 200px;
+  max-width: 20%;
 }
 
 
@@ -54,12 +54,17 @@ body {
   font-family: farmhandsans, sans-serif;
   grid-area: nav;
   position: sticky!important;
+  margin-bottom: 1em!important;
 }
+
 .navbar-toggler{
   position: sticky!important;
 }
 
-
+/* bring to ALL */
+.nav-link{
+  color: #304242!important;
+}
 
 .navbar li {
       margin-left : 1em;
@@ -121,6 +126,10 @@ body {
   font-size: 1.5em!important;
 }
 
+.darkbarn {
+  color:#304242!important;
+}
+
 
 .motto {
   grid-area: motto;
@@ -161,6 +170,7 @@ h1{
 #grow {
   margin-bottom: 0.25em!important;
   font-size: 300%!important;
+  color:#304242!important;
 }
 
 h2{
@@ -181,15 +191,20 @@ h2{
  max-width: 100%;
  max-height: 100%;
 }
-
+/* BRING ALL */
 .secthead {
   background-color: #e8DDa9;
+  color:#304242;
   color: 304242;
   font-family: apricots, cursive;
   font-weight: 400;
   justify-items: center;
   font-size: 4em;
   border-radius: 0.25em;
+}
+/* Bring to ALL */
+#mc-embedded-subscribe{
+  background-color: #304242!important;
 }
 
 .row1 {
@@ -209,8 +224,13 @@ h2{
   font-weight: 400;
 }
 
+.sect-body-left {
+  margin-right: 2em;
+}
+
 .signature {
   font-family: apricots, cursive;
+  color: #304242;
   font-weight: 300;
   font-size: 1.75em;
   justify-self: end;
@@ -292,6 +312,7 @@ border-radius: 1em;
 }
 
 hr{
+  color:#304242!important;
   border: 8px solid #304242!important;
   border-radius: 0.25em;
 }
@@ -301,6 +322,15 @@ footer {
   text-align: center;
 
 }
+
+.sect-body-left {
+  margin-right: 2em;
+}
+
+.sect-body-right {
+  margin-left: 2em;
+}
+
 
 @media (max-width: 960px){
   .row1{
