--- a/css/styles_services.css
+++ b/css/styles_services.css
@@ -174,7 +174,7 @@ h2{
   margin: 0 10%;
   /* margin-top: 2em; */
   font-family: "Open Sans", sans-serif;
-  font-size: 1.5em;
+  font-size: 2rem;
 }
 
 .headshot {
