--- a/css/styles_index1.css
+++ b/css/styles_index1.css
@@ -135,7 +135,7 @@ body {
   width: 100%;
   /* margin: 24px; */
   font-weight: 600;
-  font-size: 2em;
+  font-size: 5rem;
   font-family: "Open Sans", sans-serif;
   display: grid;
   grid-template-columns:5% 30% 30% 30% 5%;
@@ -153,7 +153,7 @@ body {
   font-family: farmhandsans, sans-serif;
 }
 .colord {
-  color : #304242;
+  /* color : #304242; */
   font-weight: 900;
   font-family: apricots, cursive!important;
 }
