--- a/css/styles_events.css
+++ b/css/styles_events.css
@@ -199,7 +199,7 @@ h2{
  max-height: 100%;
 }
 
-.secthead {
+/* .secthead {
   background-color: #e8DDa9;
   color: 304242;
   font-family: apricots, cursive;
@@ -207,12 +207,12 @@ h2{
   justify-items: center;
   font-size: 4em;
   border-radius: 0.25em;
-}
+} */
 
 .row1 {
   display: grid;
   grid-template-rows: auto;
-  background-color: #e8DDa9;
+  /* background-color: #e8DDa9; */
   padding: 2rem 4rem 2rem 4rem;
   /* border-radius: 3rem; */
   grid-template-columns: 2fr 1fr ;
@@ -244,8 +244,15 @@ border-radius: 1em;
   grid-template-rows: auto;
   grid-template-columns: 1fr 2fr ;
   grid-template-areas: "pepper text";
-  margin: 5vw;
   align-items: center;
+
+ 
+  background-color: #e8DDa9;
+  padding: 2rem 4rem 2rem 4rem;
+  /* border-radius: 3rem; */
+  margin: 2rem 0 2rem 0;
+ 
+  
 }
 .row2>.c1{
   grid-area: pepper;
@@ -323,7 +330,7 @@ footer {
 
 /* BRING ALL */
 .secthead {
-  background-color: #e8DDa9;
+  /* background-color: #e8DDa9; */
   color:#304242;
   font-family: apricots, cursive;
   font-weight: 400;
