--- a/css/styles_events.css
+++ b/css/styles_events.css
@@ -188,12 +188,19 @@ h2{
 .body-text {
   text-align: justify;
   text-justify: inter-word!important;
-  margin: 4rem 4rem 4rem 0rem;
+
   /* margin-top: 2em; */
   font-family: "Open Sans", sans-serif;
   font-size: 2rem;
 }
 
+.row-text-left {
+  margin: 4rem 4rem 4rem 0rem;
+}
+
+.row-text-right {
+  margin: 4rem 0rem 4rem 4rem;
+}
 .headshot {
  max-width: 100%;
  max-height: 100%;
@@ -276,9 +283,12 @@ border-radius: 1em;
   grid-template-rows: auto;
   grid-template-columns: 2fr 1fr ;
   grid-template-areas: "quote leah";
-  margin: 5vw;
   align-items: center;
-}
+  /* background-color: #e8DDa9; */
+  padding: 2rem 4rem 2rem 4rem;
+  /* border-radius: 3rem; */
+   margin: 2rem 0 2rem 0;
+ }
 
 .row3 > .c1 {
   grid-area: quote;
