--- a/contactform/form.css
+++ b/contactform/form.css
@@ -121,10 +121,14 @@ body{
   padding: 0;
   background-color: #f0f7ee!important;
   display: grid;
-  font-size: 2em;
+  font-size: 3.5rem;
   font-family: farmhandsans, sans-serif;
   grid-area: nav;
   position: sticky!important;
+}
+
+.dropdown-item {
+  font-size: 2.1rem!important;
 }
 
 /* bring to ALL */
