--- a/css/styles_events.css
+++ b/css/styles_events.css
@@ -229,6 +229,13 @@ h2{
   align-items: center;
 }
 
+.row1-5{
+  background: rgb(232,221,169);
+background: linear-gradient(0deg, rgba(232,221,169,1) 0%, rgba(255,255,255,0) 100%);
+  margin: 0;
+  height: 4rem;
+}
+
 .row1 > .c2 {
   grid-area: quote;
   align-content: center;
@@ -257,7 +264,7 @@ border-radius: 1em;
   background-color: #e8DDa9;
   padding: 2rem 4rem 2rem 4rem;
   /* border-radius: 3rem; */
-  margin: 2rem 0 2rem 0;
+  margin: 0rem 0 2rem 0;
  
   
 }
