Sunday Sprint Changes
Updated copy changing formats etc.

--- a/contactform/form.css
+++ b/contactform/form.css
@@ -18,7 +18,7 @@ html
 
 
 body{    
-  background:url('../img/welcome2.jpg') no-repeat;
+  background:url('../img/contactbg.jpg') no-repeat;
   background-size: cover;
   height:100%;
   background-attachment: fixed;
