--- a/css/styles_index1.css
+++ b/css/styles_index1.css
@@ -145,7 +145,7 @@ body {
 
 .farmhand{
   font-family: farmhandsans, sans-serif!important;
-  font-size: 1.5em!important;
+
 }
 
 .darkbarn {
@@ -207,7 +207,7 @@ h2{
   margin: 0 10%;
   /* margin-top: 2em; */
   font-family: "Open Sans", sans-serif;
-  font-size: 1.5em;
+  font-size: 2rem;
 }
 
 .headshot {
@@ -224,7 +224,7 @@ h2{
   font-family: apricots, cursive;
   font-weight: 400;
   justify-items: center;
-  font-size: 4em;
+  font-size: 6rem;
   border-radius: 0.25em;
 }
 
@@ -263,7 +263,7 @@ h2{
   grid-area: quote;
   align-content: center;
   font-family: "Open Sans", sans-serif;
-  font-size: 1.25em;
+  font-size: 1.75rem;
   font-weight: 400;
 }
 
@@ -272,7 +272,7 @@ h2{
   font-family: apricots, cursive;
   color: #304242;
   font-weight: 300;
-  font-size: 1.75em;
+  font-size: 3rem;
   justify-self: end;
 }
 
@@ -382,6 +382,10 @@ footer {
     font-size: 3.5rem;
   }}
 @media (max-width: 960px){
+  .cimg {
+    width: ;
+    height: 100%!important;
+  }
   
   .row1{
     grid-template-columns: auto;
@@ -424,6 +428,10 @@ footer {
 }
 
 @media (max-width: 768px){
+  .cimg {
+    width: ;
+    height: 100%!important;
+  }
   .site-logo{
     max-width: 15em;
     justify-self: flex-start;
