--- a/css/styles_21ststfarm.css
+++ b/css/styles_21ststfarm.css
@@ -85,9 +85,9 @@ body {
   border: 0px;
 }
 
-#navbarTogglerDemo02 {
-  /* background-color: #f0f7ee; */
-}
+/* #navbarTogglerDemo02 {
+  background-color: #f0f7ee;
+} */
 
 .page-divider {
   border-bottom-width: 2px;
