--- a/contactform/form.css
+++ b/contactform/form.css
@@ -22,10 +22,12 @@ body{
   background-size: cover;
   background-position: right top;
   height:100%;
+  font-size: 2.5rem;
   background-attachment: fixed;
   font-family:  "Open Sans", sans-serif;
 
 }
+
 
 .btm-txt {
   margin-bottom: 0;
@@ -48,12 +50,12 @@ body{
 }
 
 .btn-danger{
-  background-color: #304242;
-    border-color: #304242;
+  background-color: #304242!important;
+    border-color: #304242!important;
 }
 .btn-danger:hover{
-  background-color: #6b838b;
-    border-color: #6b838b;
+  background-color: #6b838b!important;
+    border-color: #6b838b!important;
 }
 .img{
   width: 100%;
@@ -97,6 +99,7 @@ body{
   border-radius: 15px;
   margin-top: 5%;
   line-height: 5%;
+  font-size: 2rem;
   padding: 5%;
   justify-items: center;
   justify-content: center;
