--- a/css/styles_shop.css
+++ b/css/styles_shop.css
@@ -1,225 +1,112 @@
-body {
-  height: 100%;
-}
-/* html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-} */
 
-@font-face {
-  font-family: farmhandsans;
-  src: url('../font/FarmhandSans-Regular.otf') format("opentype");
-}
+/* modal styles */
 
-
-@font-face {
-  font-family: apricots;
-  src: url('../font/Apricots.otf') format("opentype");
-}
-
-
-
-.container-fluid {
-  height: 100%;
+/* Full-width input fields */
+input[type=text], input[type=password] {
   width: 100%;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto auto auto auto auto;
-  grid-template-areas:
-    "logo"
-    "nav"
-    "photo"
-    "motto"
-    "body";
-  align-items: center;
-  justify-items: center;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
-.site-logo {
-  display: grid;
-  grid-area: logo;
-  max-width: 200px;
-}
-
-
-.navbar {
-  color: #304242!important;
-  /* background-image: url("../img/bar.png"); */
-  font-weight: 700;
+/* Set a style for all buttons */
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
   width: 100%;
-  padding: 0;
-  background-color: #f0f7ee!important;
-  display: grid;
-  font-size: 2em;
-  font-family: farmhandsans, sans-serif;
-  grid-area: nav;
-  position: sticky!important;
 }
 
+button:hover {
+  opacity: 0.8;
+}
 
-  .navbar li {
-      margin-left : 1em;
-      margin-right : 1em;
-  }
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
 
-
-
-.main-photo {
-  grid-area: photo;
-  width: 100%;
-  height: 320px;
+/* Center the image and position the close button */
+.imgcontainer {
   text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
 }
 
-.shopify-buy__product__title {
-  font-family: farmhandsans, sans-serif!important;
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
 }
 
-.main-photo > img {
-  /* object-position: 50% 50%; */
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  /* z-index: ; */
-  object-fit: cover;
+.container {
+  padding: 16px;
 }
 
-.farmhand{
-  font-family: farmhandsans, sans-serif!important;
-  font-size: 1.5em!important;
+span.psw {
+  float: right;
+  padding-top: 16px;
 }
 
-
-.motto {
-  grid-area: motto;
-  color: #6b838b!important;
-  width: 100%;
-  margin: 24px;
-  font-weight: 600;
-  font-size: 2em;
-  font-family: "Open Sans", sans-serif;
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  justify-content: space-around;
-
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
 }
 
-.foodis {
-  font-family: farmhandsans, sans-serif;
-}
-.colord {
-  color : #304242;
-  font-weight: 900;
-  font-family: apricots, cursive!important;
-}
-
-h1{
-  font-family: apricots, cursive!important;
-  text-align: center;
-  font-size: 400%!important;
-  margin-top: 1em!important;
-  margin-bottom: 1em!important;
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
 }
 
-.body-text {
-  grid-area: body;
-  margin: 0 10%;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.5em;
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
 }
 
-.secthead {
-  background-color: #e8DDa9;
-  color: 304242;
-  font-family: apricots, cursive;
-  font-weight: 400;
-  justify-items: center;
-  font-size: 4em;
-  border-radius: 0.25em;
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
 }
 
-.row1 {
-  display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: 2fr 1fr ;
-  grid-template-areas: "quote leah";
-  margin: 2em 10% 2em 10%;
-  align-items: center;
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
 }
 
-.row1 > .c2 {
-  grid-area: quote;
-  align-content: center;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.25em;
-  font-weight: 900;
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
 }
 
-.signature {
-  font-family: apricots, cursive;
-  font-weight: 300;
-  font-size: 1.75em;
-  justify-self: end;
-}
-
-.row1 > .c3 {
-  grid-area: leah;
-}
-
-.row1 > .c3 > img{
-border-radius: 1em;
-}
-
-.row2 {
-  display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr 2fr ;
-  grid-template-areas: "pepper text";
-  margin: 2em 10% 2em 10%;
-  align-items: center;
-}
-.row2>.c1{
-  grid-area: pepper;
-}
-.row2 > .c1 > img {
-  width: 560px;
-  border-radius: 1em;
-  max-width: 50vw;
-}
-.row2>.c2 {
-  margin-left: 2em;
-  align-content: center;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.25em;
-  font-weight: 900;
-}
-
-hr{
-  border: 8px solid #304242!important;
-  border-radius: 0.25em;
-}
-
-footer {
-  font-family: "Open Sans", sans-serif;
-  text-align: center;
-
-}
-
-@media (max-width: 960px){
-  .row1{
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-    grid-template-areas: "quote"
-    "leah";
-  }
-}
-
-@media (max-width: 768px){
-  .site-logo{
-    max-width: 15em;
-    justify-self: flex-start;
-  }
-  .motto {
-    font-size: 1.5em;
-  }
-}
+/* end modal syles */
