--- a/css/styles_shop.css
+++ b/css/styles_shop.css
@@ -11,6 +11,11 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
 }
 
+#llEmbeddedStore{
+  position: absolute;
+  top: 0;
+}
+
 /* Set a style for all buttons */
 button {
   background-color: #4CAF50;
