--- a/css/styles_shop.css
+++ b/css/styles_shop.css
@@ -11,10 +11,10 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
 }
 
-#llEmbeddedStore{
+/* #llEmbeddedStore{
   position: absolute;
   top: 0;
-}
+} */
 
 /* Set a style for all buttons */
 button {
