--- a/css/styles_index1.css
+++ b/css/styles_index1.css
@@ -382,11 +382,44 @@ footer {
   margin-left: 2em;
 }
 
+.vendor_pics_box {
+  display: grid;
+  max-width: 100vw;
+  grid-template-columns: repeat(6, auto);
+  grid-template-rows: repeat(5, auto);
+  justify-items: center;
+
+}
+
+.vendor_pic_spot{
+  max-width: 15vw;
+}
+.vendor_pic_spot > img{
+  max-width: 20rem;
+  margin: 2.5rem;
+}
 
 @media (max-width: 1340px){
   .motto {
     font-size: 3.5rem;
-  }}
+  }
+  .vendor_pics_box {
+    display: grid;
+    max-width: 100vw;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(6, auto);
+    justify-items: center;
+  
+  }
+  
+  .vendor_pic_spot{
+    max-width: 15vw;
+  }
+  .vendor_pic_spot > img{
+    max-width: 10rem;
+    margin: .25rem;
+  }
+}
 @media (max-width: 960px){
   .cimg {
     height: 100%!important;
@@ -429,6 +462,23 @@ footer {
 
   .motto {
     font-size: 3rem;
+  }
+
+  .vendor_pics_box {
+    display: grid;
+    max-width: 100vw;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(8, auto);
+    justify-items: center;
+  
+  }
+  
+  .vendor_pic_spot{
+    max-width: 15vw;
+  }
+  .vendor_pic_spot > img{
+    max-width: 5rem;
+    margin: .5rem;
   }
 }
 
